# feeding-deployment

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
assets/urdf/wheelchair/: wheelchair.urdf
config/: bite_transfer.rviz  real.rviz  sim.rviz
drink_acquisition/scripts/: cup_acquisition.py
launch/: robot.launch  rosbag.launch  sensors.launch  sim.launch
pybullet-collision-checks/: collision_checking_demo.py  demo.py
pybullet-cup-manipulation/: cup_manipulation.py  cup_manipulation_utils.py  demo.py  scene.py
robot_controller/: gen3_robotiq_2f_85.urdf  joint_compliant_controller.py  kinova.py
src/feeding_deployment/actions/: acquisition.py  base.py  emulate_transfer.py  food_manipulation_skill_library.py  high_level_actions.py  inside_mouth_transfer.py  low_level_actions.py  outside_mouth_transfer.py  pick_tool.py  stow_tool.py  tf_utils.py  transfer_tool.py
src/feeding_deployment/aruco_perception/: aruco_perception.py
src/feeding_deployment/assets/: check.py  simplify_mesh.py  vhacd_log.txt
src/feeding_deployment/config/: poses.yaml
src/feeding_deployment/drinking/: cup_manipulation.py  cup_manipulation_scene.py  cup_manipulation_utils.py  demo.py  planning.py  scene.py  utils.py
src/feeding_deployment/environment/: scene.py
src/feeding_deployment/gesture_synthesis/: compile_results.py  parse_gesture_data.py  personalized_detector.py  prompt.txt  record_gesture_data.py  robot.py  validate_examples.py
src/feeding_deployment/head_perception/: deca_perception.py  head_perception.py  ros_wrapper.py
src/feeding_deployment/integration/: bite_transfer_demo.py  debug.txt  (+21 more)
(+5439 files in other folders)
